--- a/Authentication.API/appsettings.json
+++ b/Authentication.API/appsettings.json
@@ -1,6 +1,6 @@
 {
     "ConnectionStrings": {
-        "AuthenticationDatabaseConnection": "Server=94.73.148.175;Database=u1836562_auth;User Id=u1836562_auth_u;Password=z3@0qI4c1i_F.CQ;"
+        "AuthenticationDatabaseConnection": "Server=;Database=;User Id=;Password=;"
     },
     "Logging": {
         "LogLevel": {
@@ -17,9 +17,9 @@
     "EmailSettings": {
         "SmtpHost": "smtp.gmail.com",
         "SmtpPort": 587,
-        "SmtpUsername": "lmasteregol@gmail.com",
+        "SmtpUsername": "@gmail.com",
         "SmtpPassword": "",
-        "SenderEmail": "lmasteregol@gmail.com"
+        "SenderEmail": "@gmail.com"
     },
     "AllowedHosts": "*"
 }
