--- a/Authentication.API/appsettings.json
+++ b/Authentication.API/appsettings.json
@@ -10,8 +10,8 @@
     },
     "Jwt": {
         "Key": "tLwb13x+XhmZK0OlfzZf8A8fZV77Y2i1GdH4EBV74Eo=",
-        "Issuer": "your_issuer_here",
-        "Audience": "your_audience_here",
+        "Issuer": "",
+        "Audience": "",
         "ExpirationInMinutes": 60
     },
     "EmailSettings": {
